# api-in-stress

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.Docker.md  README.md  docker-compose-db-replicas.yml  docker-compose-db.yml  docker-compose-redis.yml  docker-compose.yml  nginx.conf  pgbouncer.ini  postgresql.conf  run-all.sh  run-services.sh
configuration/: base.yaml
migrations/: 20240408083641_add_users.sql  20240417061031_add_skills.sql  20240417061100_add_warrior_skills.sql
migrations/2024-04-05-232150_create_warriors/: down.sql  up.sql
sql/: create_tables.sql  db_part1.sql  db_part2.sql  db_primary.sql  fill_tables.sql  fill_tables_part1.sql  fill_tables_part2.sql
src/: app.rs  app_state.rs  configuration.rs  database.rs  handlers.rs  lib.rs  main.rs  models.rs  primary_database.rs  queries.rs  redis.rs  retry_policy.rs  schema.rs  seeds.rs  storage.rs  telemetry.rs  utilities.rs  valid_fight_skills.rs
src/handlers/: count_warriors.rs  create_warrior.rs  get_warrior.rs  mod.rs  queries.rs  search_warriors.rs
