[package]
name = "api_in_stress"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "api_in_stress"

[dependencies]
axum = "0.7.5"
bb8 = "0.8"
bb8-postgres = "0.7.0"
bb8-redis = "0.14.0"
config = "0.13.2"
dotenvy = "0.15"
env_logger = "0.9"
hyper = { version = "1.0", features = [] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
redis = "0.24.0"
validator = { version = "0.16", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "macros" ] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-postgres = "0.7.2"
tower = { version = "0.4", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Needed for Postgres.
openssl = "*"
tower-http = { version = "0.5.2", features = ["full"] }
serde_json = "1.0.115"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde-aux = "4.5.0"
serde_valid = "0.19.0"
chrono = "0.4.38"
tower-retry = "0.3.0"
futures-util = "0.3.30"
tokio-retry = "0.3.0"
[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.reqwest]
version = "0.11.13"
default-features = false
features = [
    "json",
    "rustls-tls",
    "cookies"
]
